deploy/details.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: details
  namespace: books-dev
  labels:
    app: details
    service: details
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: details

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-v1
  namespace: books-dev
  labels:
    app: details
    version: v1
spec:
  selector:
    matchLabels:
      app: details
  replicas: 1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      containers:
        - name: details
          image: istio/examples-bookinfo-details-v1:1.10.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
