deploy/product-page.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: books-dev
  labels:
    app: productpage
    service: productpage
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: productpage

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: productpage-v1
  namespace: books-dev
  labels:
    app: productpage
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: productpage
        version: v1
    spec:
      containers:
        - name: productpage
          image: istio/examples-bookinfo-productpage-v1:1.10.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
