deploy/ratings.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: books-dev
  labels:
    app: ratings
    service: ratings
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: ratings

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ratings-v1
  namespace: books-dev
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ratings
        version: v1
    spec:
      containers:
        - name: ratings
          image: istio/examples-bookinfo-ratings-v1:1.10.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
